# Search-for-EPs

./: .buildinfo  .gitignore  GPFlow_model_class.py  LICENSE  README.md  data.csv  data_kernel_ev_25.csv  data_preprocessing.py  eigenvalues_5d_one_close_re.csv  eigenvalues_5d_two_close_im.csv  gaussian_process_regression.py  genindex.html  index.html  main.py  matrix.py  model_noise_dependency_55_color.csv  objects.inv  plots.py  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.py  tests.py  zero_search.py  zerosearch.py
.github/workflows/: sphinx.yml
_pages/: GPFlow_model_class.html  code.html  data.html  eval.html  gpr.html  installation.html  userguide.html  zero_search.html
_sources/: index.rst.txt
_sources/_pages/: GPFlow_model_class.rst.txt  code.rst.txt  data.rst.txt  eval.rst.txt  gpr.rst.txt  userguide.rst.txt  zero_search.rst.txt
docs/: CNAME  genindex.html  index.html  objects.inv  py-modindex.html  requirements.txt  search.html  searchindex.js
docs/_images/: model_noise_dependency_55-3
docs/_pages/: GPFlow_model_class.html  code.html  data.html  eval.html  gpr.html  installation.html  progress.html  theory.html  zero_search.html
docs/_sources/_pages/: eval.rst.txt  gpr.rst.txt  theory.rst.txt  zero_search.rst.txt
docs/source/: conf.py  index.rst
docs/source/_pages/: GPFlow_model_class.rst  code.rst  data.rst  installation.rst  (+4 more)
searchep/: GPFlow_model_class.py  __init__.py  data.py  eval.py  gpr.py  main.py  plots.py  tests.py  training.py
usage/: Punkt23_initial_dataset_biggest_radius.csv  README.md  tutorial.py
(+1 files in other folders)
