[tool.poetry]
name = "searchep"
version = "0.1.2"
description = "A module to search for exceptional points"
authors = ["Patrick Egenlauf <patrick.egenlauf+searchep@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://search-for-eps.github.io/Search-for-EPs/"
repository = "https://github.com/Search-for-EPs/Search-for-EPs"
documentation = "https://search-for-eps.github.io/Search-for-EPs/"
keywords = ["searchep", "EP", "search for EPs", "exceptional points", "stepwise grouping algorithm"]

[tool.poetry.dependencies]
python = ">= 3.9.2, < 3.11"
jax = {extras = ["cpu"], version = ">= 0.3.13, < 1.0.0"}
jaxlib = ">= 0.3.10, < 1.0.0"
numpy = "^1.21.6"
tensorflow = "^2.11.1"
gpflow = "^2.5.2"
pandas = "^1.3.5"
plotly = "^5.8.0"
scipy = "^1.7.3"
matplotlib = "^3.5.2"
setuptools = ">= 52.0.0"
scikit-learn = "^1.2.2"
typing-extensions = "^4.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
